<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        >
    <ImageView
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:src="@drawable/bridgelabz"
        android:layout_marginLeft="120dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Email_Or_UserName"
            android:id="@+id/EmailEditText"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Password"
            android:inputType="textPassword"
            android:id="@+id/PasswordEditText"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password_Forgot"
            android:id="@+id/ForgotTv"
            android:onClick="ForgotTextView"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="180dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_Button"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginLeft="120dp"
            android:onClick="Login"
            android:id="@+id/loginbtn"
            android:layout_marginRight="120dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register_Button"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="120dp"
            android:onClick="Register"
            android:id="@+id/Registerbtn"
            android:layout_marginRight="120dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:id="@+id/fb"
            android:onClick="Facebook"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Or"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textAlignment="center"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/googlesignin"
            android:onClick="Google"
            android:id="@+id/ggl"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            />
    </LinearLayout>

</LinearLayout>
